# opymizator

./: .cruft.json  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
example/: config.yaml  trials.csv
src/opymizator/: cli.py
tests/: __init__.py  test_opymizator.py
